자막 관련 API 및 스키마 수정
