# Backend/models/models.js
@@ -63,13 +63,14 @@ const understandingStuSchema = new Schema({
     isCounted: { type: Number }
 })
 
-const subtitleSchema = new Schema({
-    lecture: { type: Number, ref: 'lecture' },
-    contents: [{
-        content: { type: String },
-        time: { type: String }
-    }]
-});
+// const subtitles = new Schema({
+//     lecture: { type: Number, ref: 'lecture' },
+//     contents: [{
+//         content: { type: String },
+//         time: { type: String }
+//     }]
+// })
+    
 
 const noticeSchema = new Schema({
     subject: { type: Number, ref: 'subject' },
@@ -149,7 +150,7 @@ questionSchema.plugin(mongooseAutoInc.plugin, 'question');
 // chattingSchema.plugin(mongooseAutoInc.plugin, 'chatting');
 understandingProSchema.plugin(mongooseAutoInc.plugin, 'understandingPro');
 understandingStuSchema.plugin(mongooseAutoInc.plugin, 'understandingStu');
-subtitleSchema.plugin(mongooseAutoInc.plugin, 'subtitle');
+// subtitleSchema.plugin(mongooseAutoInc.plugin, 'subtitle');
 noticeSchema.plugin(mongooseAutoInc.plugin, 'notice');
 lectureNoteSchema.plugin(mongooseAutoInc.plugin, 'lectureNote');
 assignmentSchema.plugin(mongooseAutoInc.plugin, 'assignment');
@@ -161,7 +162,7 @@ const questionModel = model('question', questionSchema);
 // const chattingModel = model('chatting', chattingSchema);
 const understandingProModel = model('understandingPro', understandingProSchema);
 const understandingStuModel = model('understandingStu', understandingStuSchema);
-const subtitleModel = model('subtitle', subtitleSchema);
+// const subtitleModel = model('subtitle', subtitleSchema);
 const noticeModel = model('notice', noticeSchema);
 const lectureNoteModel = model('lectureNote', lectureNoteSchema);
 const assignmentModel = model('assignment', assignmentSchema);
@@ -174,7 +175,7 @@ module.exports = {
     // Chatting : chattingModel,
     UnderstandingPro : understandingProModel,
     UnderstandingStu : understandingStuModel,
-    Subtitle : subtitleModel,
+    // Subtitle : subtitleModel,
     Notice : noticeModel,
     LectureNote : lectureNoteModel,
     Assignment : assignmentModel,
